tests/type/bad/type_mismatch.hel
// @name type_mismatch
// @phase type
// @expect error

import std.io

answer: i32 = "not an integer";

main = () : IO<()> {
    io.println("nope")
}
